// Vitest Snapshot v1

exports[`launch Edge with custom arguments 1`] = `
[
  [
    {
      "args": [
        "foobar",
      ],
      "defaultViewport": {
        "height": 456,
        "width": 123,
      },
      "executablePath": "/path/to/edge",
      "headless": true,
      "ignoreDefaultArgs": undefined,
      "prefs": undefined,
      "product": "chrome",
    },
  ],
]
`;

exports[`launch Edge with default values 1`] = `
[
  [
    {
      "defaultViewport": {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "/path/to/edge",
      "headless": false,
      "ignoreDefaultArgs": undefined,
      "prefs": undefined,
      "product": "chrome",
    },
  ],
]
`;

exports[`launch Edge without Puppeteer default args (backwards compat) 1`] = `
[
  [
    {
      "defaultViewport": {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "/path/to/edge",
      "headless": true,
      "ignoreDefaultArgs": true,
      "prefs": {
        "foo": "bar",
      },
      "product": "chrome",
    },
  ],
]
`;

exports[`launch Edge without Puppeteer default args 1`] = `
[
  [
    {
      "defaultViewport": {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "/path/to/edge",
      "headless": true,
      "ignoreDefaultArgs": true,
      "prefs": undefined,
      "product": "chrome",
    },
  ],
]
`;

exports[`launch Firefox Nightly binary without Puppeteer default args 1`] = `
[
  [
    {
      "binary": "firefox",
      "defaultViewport": {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "firefox",
      "headless": true,
      "ignoreDefaultArgs": true,
      "prefs": {
        "foo": "bar",
      },
      "product": "firefox",
    },
  ],
]
`;

exports[`launch Firefox Nightly without Puppeteer default args 1`] = `
[
  [
    {
      "binary": "/foo/firefox-nightly",
      "defaultViewport": {
        "height": 900,
        "width": 1200,
      },
      "executablePath": "/foo/firefox-nightly",
      "headless": true,
      "ignoreDefaultArgs": true,
      "prefs": undefined,
      "product": "firefox",
    },
  ],
]
`;

exports[`launch Firefox with custom arguments 1`] = `
[
  [
    {
      "defaultViewport": {
        "height": 456,
        "width": 123,
      },
      "executablePath": "/path/to/firefox",
      "headless": true,
      "ignoreDefaultArgs": undefined,
      "prefs": undefined,
      "product": "firefox",
    },
  ],
]
`;

exports[`launch chrome with chrome arguments 1`] = `
[
  [
    {
      "chromeFlags": [
        "--enable-automation",
        "--disable-popup-blocking",
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--disable-sync",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--no-default-browser-check",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--force-fieldtrials=*BackgroundTracing/default/",
        "--enable-features=NetworkService,NetworkServiceInProcess",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=412,732",
        "--headless",
        "--no-sandbox",
        "--window-size=222,333",
        "--device-scale-factor=3.5",
        "--user-agent=Mozilla/5.0 (Linux; Android 8.0.0; Nexus 6P Build/OPP3.170518.006) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/75.0.3765.0 Mobile Safari/537.36",
      ],
      "chromePath": "/foo/bar",
      "envVars": {
        "foo": "bar",
      },
      "ignoreDefaultFlags": true,
      "prefs": undefined,
      "userDataDir": undefined,
    },
  ],
]
`;

exports[`launch chrome with chrome port 1`] = `
[
  [
    {
      "chromeFlags": [
        "--enable-automation",
        "--disable-popup-blocking",
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--disable-sync",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--no-default-browser-check",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--force-fieldtrials=*BackgroundTracing/default/",
        "--enable-features=NetworkService,NetworkServiceInProcess",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=1200,900",
      ],
      "chromePath": undefined,
      "envVars": undefined,
      "ignoreDefaultFlags": true,
      "port": 8041,
      "prefs": undefined,
      "userDataDir": undefined,
    },
  ],
]
`;

exports[`launch chrome with custom user data dir 1`] = `
[
  [
    {
      "chromeFlags": [
        "--enable-automation",
        "--disable-popup-blocking",
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--disable-sync",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--no-default-browser-check",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--force-fieldtrials=*BackgroundTracing/default/",
        "--enable-features=NetworkService,NetworkServiceInProcess",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=1200,900",
        "--enable-features=NetworkService",
        "--someOtherFlag",
        "--anotherFlag",
      ],
      "chromePath": undefined,
      "envVars": undefined,
      "ignoreDefaultFlags": true,
      "prefs": undefined,
      "userDataDir": "/foo/bar",
    },
  ],
]
`;

exports[`launch chrome with default values 1`] = `
[
  [
    {
      "chromeFlags": [
        "--enable-automation",
        "--disable-popup-blocking",
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--disable-sync",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--no-default-browser-check",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--force-fieldtrials=*BackgroundTracing/default/",
        "--enable-features=NetworkService,NetworkServiceInProcess",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=1200,900",
      ],
      "chromePath": undefined,
      "envVars": undefined,
      "ignoreDefaultFlags": true,
      "prefs": undefined,
      "userDataDir": undefined,
    },
  ],
]
`;

exports[`launch chrome with default values 2`] = `
[
  [
    {
      "browserURL": "http://127.0.0.1:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`launch chrome with defaultViewport in wdio:devtoolsOptions 1`] = `
[
  [
    {
      "chromeFlags": [
        "--enable-automation",
        "--disable-popup-blocking",
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--disable-sync",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--no-default-browser-check",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--force-fieldtrials=*BackgroundTracing/default/",
        "--enable-features=NetworkService,NetworkServiceInProcess",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=222,333",
        "--device-scale-factor=1.42",
        "--enable-touch-drag-drop",
        "--touch-events",
        "--enable-viewport",
      ],
      "chromePath": undefined,
      "envVars": undefined,
      "ignoreDefaultFlags": true,
      "prefs": undefined,
      "userDataDir": undefined,
    },
  ],
]
`;

exports[`launch chrome without default flags and without puppeteer default args 1`] = `
[
  [
    {
      "chromeFlags": [
        "--window-position=0,0",
        "--window-size=1200,900",
      ],
      "chromePath": undefined,
      "envVars": undefined,
      "ignoreDefaultFlags": true,
      "prefs": undefined,
      "userDataDir": undefined,
    },
  ],
]
`;

exports[`launch chrome without default flags and without puppeteer default args 2`] = `
[
  [
    {
      "browserURL": "http://127.0.0.1:1234",
      "defaultViewport": null,
      "ignoreDefaultArgs": true,
    },
  ],
]
`;

exports[`overriding chrome default flags (backwards compat) 1`] = `
[
  [
    {
      "chromeFlags": [
        "--enable-automation",
        "--disable-popup-blocking",
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--no-default-browser-check",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--force-fieldtrials=*BackgroundTracing/default/",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=1200,900",
        "--headless",
        "--no-sandbox",
        "--enable-features=NetworkService",
      ],
      "chromePath": undefined,
      "envVars": undefined,
      "ignoreDefaultFlags": true,
      "prefs": {
        "bar": "foo",
      },
      "userDataDir": undefined,
    },
  ],
]
`;

exports[`overriding chrome default flags 1`] = `
[
  [
    {
      "chromeFlags": [
        "--enable-automation",
        "--disable-popup-blocking",
        "--disable-extensions",
        "--disable-background-networking",
        "--disable-background-timer-throttling",
        "--disable-backgrounding-occluded-windows",
        "--metrics-recording-only",
        "--disable-default-apps",
        "--mute-audio",
        "--no-first-run",
        "--no-default-browser-check",
        "--disable-hang-monitor",
        "--disable-prompt-on-repost",
        "--disable-client-side-phishing-detection",
        "--password-store=basic",
        "--use-mock-keychain",
        "--disable-component-extensions-with-background-pages",
        "--disable-breakpad",
        "--disable-dev-shm-usage",
        "--disable-ipc-flooding-protection",
        "--disable-renderer-backgrounding",
        "--force-fieldtrials=*BackgroundTracing/default/",
        "--disable-features=site-per-process,TranslateUI,BlinkGenPropertyTrees",
        "--window-position=0,0",
        "--window-size=1200,900",
        "--enable-features=NetworkService",
      ],
      "chromePath": undefined,
      "envVars": undefined,
      "ignoreDefaultFlags": true,
      "prefs": undefined,
      "userDataDir": undefined,
    },
  ],
]
`;
